--- a/Fall2023/IntroToLogic.tex
+++ b/Fall2023/IntroToLogic.tex
@@ -34,15 +34,61 @@ Let $A$ and $B$ be propositions.
 $\tcboxmath{\neg A}$ and called the \textbf{negation} of $A$.
 \item The proposition ``\textbf{$A$ and $B$}'' is true if both $A$ and $B$ are true; expressed symbolically as $\tcboxmath{A \wedge B}$ and called the \textbf{conjunction} of $A$ and $B$.
 \item The proposition ``\textbf{$A$ or $B$}'' is true if at least one of $A$ or $B$ is true; expressed symbolically as $\tcboxmath{A \vee B}$ and called the \textbf{disjunction} of $A$ and $B$.
-\item\label{def:conditional} The proposition ``\textbf{If $A$, then $B$}'' is true if both $A$ and $B$ are true, or $A$ is false; expressed symbolically as $\tcboxmath{A \implies B}$ and called a \textbf{conditional proposition} (or \textbf{implication}). In this case, $A$ is called the \textbf{hypothesis} and $B$ is called the \textbf{conclusion}. Note that $A \implies B$ may also be read as ``$A$ implies $B$", ``$A$ only if $B$", ``$B$ if $A$", or ``$B$ whenever $A$". 
-\item\label{def:logically equivalent} The proposition ``\textbf{$A$ if and only if $B$}" (alternatively, ``\textbf{$A$ is necessary and sufficient for $B$}") is true if both $A$ and $B$ have the same truth value; expressed symbolically as $\tcboxmath{A\logeq B}$ and called a \textbf{biconditional proposition}. If $A\logeq B$ is true, we say that $A$ and $B$ are \textbf{logically equivalent}.
+\item\label{def:conditional} The proposition ``\textbf{If $A$, then
+    $B$}'' is true if both $A$ and $B$ are true, or $A$ is false;
+  expressed symbolically as $\tcboxmath{A \implies B}$ and called a
+  \textbf{conditional proposition} (or \textbf{implication}). In this
+  case, $A$ is called the \textbf{hypothesis} and $B$ is called the
+  \textbf{conclusion}. Note that $A \implies B$ may also be read as
+  ``$A$ implies $B$", ``$A$ only if $B$", ``$B$ if $A$", or ``$B$
+  whenever $A$".
+\item The proposition ``\textbf{$A$ if and only if $B$}" (alternatively, ``\textbf{$A$ is necessary and sufficient for $B$}") is true if both $A$ and $B$ have the same truth value; expressed symbolically as $\tcboxmath{A\logeq B}$ and called a \textbf{biconditional proposition}. 
 \end{enumerate}
 Each of the boxed propositions is called a \textbf{compound proposition}, where $A$ and $B$ are referred to as the \textbf{components} of the compound proposition.
 \end{definition}
 
-It is worth pointing out that definitions in mathematics are typically written in the form ``$B$ if $A$" (or ``$B$ provided that $A$" or ``$B$ whenever $A$"), where $B$ contains the term or phrase we are defining and $A$ provides the meaning of the concept we are defining. In the case of definitions, we should always interpret ``$B$ if $A$" as describing precisely the collection of ``objects" (e.g., numbers, sets, functions, etc.) that should be identified with the term or phrase we are defining.  That is, if an object does not meet the condition specified in $A$, then it is never referred to by the term or phrase we are defining. Some authors will write definitions in the form ``$B$ if and only if $A$". However, a definition is not at all the same kind of statement as a usual biconditional since one of the two sides is undefined until the definition is made. A definition is really a statement that the newly defined term or phrase is synonymous with a previously defined concept.
+\begin{definition}
+  We say a compound proposition is a \textbf{tautology} if the
+  compound proposition is true for all possible values of the
+  compoment propositions.  We say a compound proposition is a
+  \textbf{contradiction} if the compound proposition is false for all
+  possible values of the compoment propositions. A compound
+  proposition that is neither a tautology nor a contradiction is
+  \textbf{logically contingent}. Sometimes we use $\top$ to represent
+  a generic compound proposition that is a tautology and $\bot$ to
+  represent a generic compound proposition that is a contradiction.
+\end{definition}
 
-We can form complicated compound propositions with several components by utilizing logical connectives.
+\begin{definition}
+  We say two compound propositions are \textbf{logically equivalent}
+  if they have the truth values of the compound propositions agree for
+  all possible values of the compoment propositions. If $P$ and $Q$
+  are logically equivalent we write $ P \equiv Q$. This is an example
+  of a \textbf{meta-logical} statement. 
+\end{definition}
+
+\begin{example}
+  A compound proposition $P$ is a tautology if and only if $P \equiv \top$. 
+\end{example}
+
+It is worth pointing out that definitions in mathematics are typically
+written in the form ``$B$ if $A$" (or ``$B$ provided that $A$" or
+``$B$ whenever $A$"), where $B$ contains the term or phrase we are
+defining and $A$ provides the meaning of the concept we are
+defining. In the case of definitions, we should always interpret ``$B$
+if $A$" as describing precisely the collection of ``objects" (e.g.,
+numbers, sets, functions, etc.) that should be identified with the
+term or phrase we are defining.  That is, if an object does not meet
+the condition specified in $A$, then it is never referred to by the
+term or phrase we are defining. Some authors will write definitions in
+the form ``$B$ if and only if $A$". However, a definition is not at
+all the same kind of statement as a usual biconditional since one of
+the two sides is undefined until the definition is made. A definition
+is really a statement that the newly defined term or phrase is
+synonymous with a previously defined concept.
+
+We can form complicated compound propositions with several components
+by utilizing logical connectives.
 
 %\begin{problem}
 %Describe the meaning of $\neg (A \wedge B)$ and $\neg (A \vee B)$.
@@ -62,11 +108,15 @@ Let $A$ represent ``6 is an even integer'' and $B$ represent ``4 divides 6.''  E
 \end{problem}
 
 \begin{definition}
-A \textbf{truth table} for a compound proposition is a table that illustrates all possible combinations of truth values for the components of the compound proposition together with the resulting truth value for each combination. 
+  A \textbf{truth table} for a compound proposition is a table that
+  illustrates all possible combinations of truth values for the
+  components of the compound proposition together with the resulting
+  truth value for each combination.
 \end{definition}
 
 \begin{example}
-If $A$ and $B$ are propositions, then the truth table for the compound proposition $A\wedge B$ is given by the following.
+  If $A$ and $B$ are propositions, then the truth table for the
+  compound proposition $A\wedge B$ is given by the following.
 \begin{center}
 \begin{tabular}{@{}ccc@{}}
 \toprule
@@ -79,42 +129,107 @@ F & F & F  \\
 \bottomrule
 \end{tabular}
 \end{center}
-Notice that we have columns for each of $A$ and $B$.  The rows for these two columns correspond to all possible combinations of truth values for $A$ and $B$.  The third column yields the truth value of $A\wedge B$ given the possible truth values for $A$ and $B$.
+Notice that we have columns for each of $A$ and $B$.  The rows for
+these two columns correspond to all possible combinations of truth
+values for $A$ and $B$.  The third column yields the truth value of
+$A\wedge B$ given the possible truth values for $A$ and $B$.
 \end{example}
 
-Each component of a compound proposition has two possible truth values, namely true or false. Thus, if a compound proposition is built from $n$ component propositions, then the truth table will require $2^n$ rows.
+Each component of a compound proposition has two possible truth
+values, namely true or false. Thus, if a compound proposition is built
+from $n$ component propositions, then the truth table will require
+$2^n$ rows.
+
+
 
 \begin{problem}
-Create a truth table for each of the following compound propositions. You should add additional columns to your tables as needed to assist you with intermediate steps. For example, you might need four columns for the third and fourth compound propositions below.
+  Create a truth table for each of the following compound
+  propositions. You should add additional columns to your tables as
+  needed to assist you with intermediate steps. For example, you might
+  need four columns for the third and fourth compound propositions
+  below.
 \begin{enumerate}[label=\textrm{(\alph*)}]
 \item $\neg A$
 \item $A \vee B$
 \item $\neg (A \wedge B)$
 \item $\neg A \wedge \neg B$
+  
+\item $A \vee \neg A$
 \end{enumerate}
 \end{problem}
 
+\begin{problem}
+  What will the truth table for a tautology look like. If $P \equiv Q$
+  then what can you say about the truth tables for $P$ and $Q$?
+\end{problem}
+
 \begin{problem}\label{prob:coach lie}
-A coach promises her players, ``If we win tonight, then I will buy you pizza tomorrow.''  Determine the cases in which the players can rightly claim to have been lied to. If the team lost the game and the coach decided to buy them pizza anyway, was she lying?
+  A coach promises her players, ``If we win tonight, then I will buy
+  you pizza tomorrow.''  Determine the cases in which the players can
+  rightly claim to have been lied to. If the team lost the game and
+  the coach decided to buy them pizza anyway, was she lying?
 \end{problem}
 
 \begin{problem}
-Use Definition~\ref{def:logical connectives}\ref{def:conditional} to construct a truth table for $A \implies B$. Compare your truth table with Problem~\ref{prob:coach lie}. The combination you should pay particular attention to is when the hypothesis is false while the conclusion is true.
+  Use Definition~\ref{def:logical connectives}\ref{def:conditional} to
+  construct a truth table for $A \implies B$. Compare your truth table
+  with Problem~\ref{prob:coach lie}. The combination you should pay
+  particular attention to is when the hypothesis is false while the
+  conclusion is true.
 \end{problem}
 
-In accordance with Definition~\ref{def:logical connectives}\ref{def:conditional}, a conditional proposition $A\implies B$ is only false when the hypothesis is true and the conclusion is false.  Perhaps you are bothered by the fact that $A\implies B$ is true when $A$ is false no matter what the truth value of $B$ is.  The thing to keep in mind is that the truth value of $A\implies B$ relies on a very specific definition and may not always agree with the colloquial use of ``If\ldots, then\ldots" statements that we encounter in everyday language. For example, if someone says, ``If you break the rules, then you will be punished", the speaker likely intends the statement to be interpreted as ``You will be punished if and only if you break the rules." In logic and mathematics, we aim to remove such ambiguity by explicitly saying exactly what we mean. For our purposes, we should view a conditional proposition as a contract or obligation.  If the hypothesis is false and the conclusion is true, the contract is not violated. On the other hand, if the hypothesis is true and the conclusion is false, then the contract is broken.
+In accordance with Definition~\ref{def:logical
+  connectives}\ref{def:conditional}, a conditional proposition
+$A\implies B$ is only false when the hypothesis is true and the
+conclusion is false.  Perhaps you are bothered by the fact that
+$A\implies B$ is true when $A$ is false no matter what the truth value
+of $B$ is.  The thing to keep in mind is that the truth value of
+$A\implies B$ relies on a very specific definition and may not always
+agree with the colloquial use of ``If\ldots, then\ldots" statements
+that we encounter in everyday language. For example, if someone says,
+``If you break the rules, then you will be punished", the speaker
+likely intends the statement to be interpreted as ``You will be
+punished if and only if you break the rules." In logic and
+mathematics, we aim to remove such ambiguity by explicitly saying
+exactly what we mean. For our purposes, we should view a conditional
+proposition as a contract or obligation.  If the hypothesis is false
+and the conclusion is true, the contract is not violated. On the other
+hand, if the hypothesis is true and the conclusion is false, then the
+contract is broken.
 
-We can often prove facts concerning logical statements using truth tables.  Recall that two propositions $P$ and $Q$ (both of which might be complicated compound propositions) are logically equivalent if $P\logeq Q$ is true (see Definition~\ref{def:logical connectives}\ref{def:logically equivalent}). This happens when $P$ and $Q$ have the same truth value. We can verify whether $P$ and $Q$ have the same truth value by constructing a truth table that includes columns for each of the components of $P$ and $Q$, listing all possible combinations of their truth values, together with columns for $P$ and $Q$ that lists their resulting truth values.  If the truth values in the columns for $P$ and $Q$ agree, then $P$ and $Q$ are logically equivalent, and otherwise they are not logically equivalent.  When constructing truth tables to verify whether $P$ and $Q$ are logically equivalent, you should add any necessary intermediate columns to aid in your ``calculations". Use truth tables when attempting to justify the next few problems.
+We can often prove facts concerning logical statements using truth
+tables.  Recall that two propositions $P$ and $Q$ (both of which might
+be complicated compound propositions) are logically equivalent if
+$P\logeq Q$ is true (see Definition~\ref{def:logical
+  connectives}\ref{def:logically equivalent}). This happens when $P$
+and $Q$ have the same truth value. We can verify whether $P$ and $Q$
+have the same truth value by constructing a truth table that includes
+columns for each of the components of $P$ and $Q$, listing all
+possible combinations of their truth values, together with columns for
+$P$ and $Q$ that lists their resulting truth values.  If the truth
+values in the columns for $P$ and $Q$ agree, then $P$ and $Q$ are
+logically equivalent, and otherwise they are not logically equivalent.
+When constructing truth tables to verify whether $P$ and $Q$ are
+logically equivalent, you should add any necessary intermediate
+columns to aid in your ``calculations". Use truth tables when
+attempting to justify the next few problems.
 
 \begin{theorem}
 If $A$ is a proposition, then $\neg(\neg A)$ is logically equivalent to $A$.
 \end{theorem}
 
-The next theorem, referred to as \textbf{De Morgan's Law}, provides a method for negating a compound proposition involving a conjunction.
+The next theorem, referred to as \textbf{De Morgan's Law}, provides a
+method for negating a compound proposition involving a conjunction.
 
 \begin{theorem}[De Morgan's Law]\label{thm:De Morgan}
-If $A$ and $B$ are propositions, then $\neg(A \wedge B)$ is logically equivalent to $\neg A \vee \neg B$.
+  If $A$ and $B$ are propositions, then $\neg(A \wedge B)$ is
+  logically equivalent to $\neg A \vee \neg B$.
 \end{theorem}
+
+The operation $A | B$ read, $A$ nand $B$, is defined by $A | B = \neg
+(A \wedge B)$. This is an important operation in digital circuits
+because any logical operation can be expressed using nands. This is a
+property called \textbf{functional completeness}.
 
 \begin{problem}[De Morgan's Law]\label{prob:De Morgan}
 Let $A$ and $B$ be propositions.  Conjecture a statement similar to Theorem~\ref{thm:De Morgan} for the proposition $\neg(A\vee B)$ and then prove it. This is also called De Morgan's Law.
